Add code Gan + q7 and q8

--- a/TP6/TP6.ipynb
+++ b/TP6/TP6.ipynb
@@ -226,14 +226,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "from scipy.spatial.distance import jensenshannon\n",
-    "from math import log\n",
     "\n",
     "# Choose a value for the prior dimension\n",
     "PRIOR_N = 2\n",
@@ -242,10 +240,20 @@
     "class Generator(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.fc1 = nn.Linear(PRIOR_N, 2)\n",
+    "        self.fc1 = nn.Linear(PRIOR_N, 50)\n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.fc2 = nn.Linear(50, 100)\n",
+    "        self.fc3 = nn.Linear(100,50)\n",
+    "        self.fc4 = nn.Linear(50,2)\n",
+    "\n",
+    "\n",
+    "\n",
     "        \n",
     "    def __call__(self, z):\n",
-    "        return self.fc1(z)\n",
+    "        o1 = self.relu(self.fc1(z))\n",
+    "        o2 = self.relu(self.fc2(o1))\n",
+    "        o3 = self.relu(self.fc3(o2))\n",
+    "        return self.fc4(o3)\n",
     "    \n",
     "    def generate(self, batchlen):\n",
     "        z = torch.normal(torch.zeros(batchlen, PRIOR_N), 1.0)\n",
@@ -256,10 +264,20 @@
     "class Discriminator(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.fc1 = nn.Linear(2, 1)\n",
+    "        self.fc1 = nn.Linear(2, 50)\n",
+    "        self.fc2 = nn.Linear(50,100)\n",
+    "        self.fc3 = nn.Linear(100,50)\n",
+    "        self.fc4 = nn.Linear(50,50)\n",
+    "        self.fc5 = nn.Linear(50,2)\n",
+    "        self.relu = nn.ReLU()\n",
+    "\n",
     "    \n",
     "    def __call__(self, x):\n",
-    "        return self.fc1(x)"
+    "        o1 = self.relu(self.fc1(x))\n",
+    "        o2 = self.relu(self.fc2(o1))\n",
+    "        o3 = self.relu(self.fc3(o2))\n",
+    "        o4 = self.relu(self.fc4(o3))\n",
+    "        return torch.sigmoid(self.fc5(o4))"
    ]
   },
   {
@@ -290,28 +308,40 @@
    ],
    "source": [
     "# Number of times to train the discriminator between two generator steps\n",
-    "TRAIN_RATIO = 1\n",
+    "TRAIN_RATIO = 5\n",
     "# Total number of training iterations for the generator\n",
-    "N_ITER = 20001\n",
+    "N_ITER = 10001\n",
     "# Batch size to use\n",
-    "BATCHLEN = 128\n",
+    "BATCHLEN = 256\n",
     "\n",
     "generator = Generator()\n",
     "optim_gen = torch.optim.Adam(generator.parameters(), lr=0.001, betas=(0.5,0.9))\n",
     "discriminator = Discriminator()\n",
-    "optim_disc = torch.optim.Adam(discriminator.parameters(), lr=0.001, betas=(0.5,0.9))\n",
+    "optim_disc = torch.optim.Adam(discriminator.parameters(), lr=0.0001, betas=(0.5,0.9))\n",
+    "disc_losses = []\n",
+    "real_losses = []\n",
+    "fake_losses = []\n",
     "\n",
     "for i in range(N_ITER):\n",
     "    # train the discriminator\n",
-    "    for _ in range(TRAIN_RATIO):\n",
+    "    for j in range(TRAIN_RATIO):\n",
     "        discriminator.zero_grad()\n",
     "        real_batch = generate_batch(BATCHLEN)\n",
     "        fake_batch = generator.generate(BATCHLEN)\n",
     "        #\n",
     "        # == COMPUTE THE DISCRIMINATOR LOSS HERE ==\n",
     "        #\n",
-    "        disc_loss = 0\n",
+    "        real_loss = torch.mean(-torch.log(discriminator(real_batch)))\n",
+    "        fake_loss = torch.mean(-torch.log(1- discriminator(fake_batch)))\n",
+    "        disc_loss =  real_loss  + fake_loss\n",
     "        disc_loss.backward()\n",
+    "        disc_losses.append(disc_loss.item())\n",
+    "        real_losses.append(real_loss.item())\n",
+    "        fake_losses.append(fake_loss.item())\n",
+    "        if j%10000 == 0:\n",
+    "            '''print('loss disc',disc_loss.item())\n",
+    "            print('loss real data',torch.mean(-torch.log(discriminator(real_batch))).item())\n",
+    "            print('mean disc', torch.mean(discriminator(real_batch)).item())'''\n",
     "        optim_disc.step()\n",
     "    # train the generator\n",
     "    generator.zero_grad()\n",
@@ -319,12 +349,13 @@
     "    #\n",
     "    # == COMPUTE THE GENERATOR LOSS HERE\n",
     "    #\n",
-    "    gen_loss = 0\n",
+    "    gen_loss = torch.mean(-torch.log(discriminator(fake_batch)))\n",
     "    gen_loss.backward()\n",
     "    optim_gen.step()\n",
-    "    if i%1000 == 0:\n",
-    "        print('step {}: discriminator: {:.3e}, generator: {:.3e}'.format(i, float(disc_loss), float(gen_loss)))\n",
-    "        # plot the result\n",
+    "    if i%1000 == 0: \n",
+    "        '''print('mean gen', torch.mean(discriminator(fake_batch)).item())\n",
+    "        print('loss gen', gen_loss.item())\n",
+    "        print('step {}: discriminator: {:.3e}, generator: {:.3e}'.format(i, float(disc_loss.item()), float(gen_loss.item())))'''# plot the result\n",
     "        real_batch = generate_batch(1024)\n",
     "        fake_batch = generator.generate(1024).detach()\n",
     "        plt.scatter(real_batch[:,0], real_batch[:,1], s=2.0, label='real data')\n",
@@ -417,7 +448,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> A recopier"
+    "$$D_{KL}(p_D||p_\\theta) = \\int_X \\log(\\frac{p_D}{p_\\theta}) dp_D = \\int_X \\log(\\frac{p_D}{p_\\theta})p_D dx$$\n",
+    "$$D_{KL}(p_D||p_\\theta) = \\int_X \\log p_D(x) p_D(x) dx -  \\int_X \\log p_\\theta(x) p_D(x) dx$$\n",
+    "$$D_{KL}(p_D||p_\\theta) = \\mathbb{E}_{p_D}[\\log(p_D)] - \\mathbb{E}_{p_D}[\\log(p_\\theta)]$$\n",
+    "\n",
+    "As we try to find $p_\\theta$ which minimize the divergence the first term is constant.\n",
+    "And maximizing $\\mathbb{E}_{p_D}[\\log(p_\\theta)]$ is equivalent to minimizing $D_{KL}(p_D||p_\\theta)$"
    ]
   },
   {
@@ -849,7 +885,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
